# Solver

./: CMakeLists.txt  dpllsatSolver.cc  dpllsatSolver.h  eval.sh  exceptionHandler.h  main.cc  parser.cc  parser.h  tokenizer.cc  tokenizer.h  treeNode.cc  treeNode.h  tseitinTransformer.cc  tseitinTransformer.h
